@@ -24,6 +24,7 @@
  */
 package co.elastic.apm.agent.impl.payload;
 
+import co.elastic.apm.agent.bci.ElasticApmAgent;
 import co.elastic.apm.agent.configuration.CoreConfiguration;
 import co.elastic.apm.agent.util.VersionUtils;
 
@@ -41,7 +42,7 @@ public class ServiceFactory {
     }
 
     private String getAgentVersion() {
-        String version = VersionUtils.getVersion(ServiceFactory.class, "co.elastic.apm", "elastic-apm-agent");
+        String version = VersionUtils.getAgentVersion();
         if (version == null) {
             return "unknown";
         }
